--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap);
 * {
   margin: 0;
 }
@@ -8,6 +9,54 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Poppins", "Open Sans", serif;
+}
+
+.header {
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.header__dropdown {
+  width: 10rem;
+}
+
+.header__link {
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+}
+.header__link:hover {
+  text-decoration: underline;
+}
+
+.header__dropdown {
+  width: 10vw;
+  height: 1.5rem;
+  text-align: center;
+  border: 0px;
+}
+.header__dropdown:hover {
+  background-color: rgba(211, 211, 211, 0.749);
+  border-color: white;
+}
+
 .header {
   background-color: whitesmoke;
+}
+
+.weather {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: bisque;
+  background-image: url("https://unsplash.com/photos/hRg1KL4-AUE");
+  height: 100vh;
+}
+
+.forecast-card {
+  background-color: rgba(255, 255, 255, 0.6588235294);
 }/*# sourceMappingURL=main.css.map */
