--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,21 @@
 @use "./partials/header";
 @use "./partials/resets" as *;
 @use "./partials/variables" as *;
+@use "./partials/fonts" as *;
 
 .header {
   background-color: whitesmoke;
+}
+
+.weather {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: bisque;
+  background-image: url("https://unsplash.com/photos/hRg1KL4-AUE");
+  height: 100vh;
+}
+
+.forecast-card {
+  background-color: adjust-hue($color: #ffffffa8, $degrees: 0);
 }
