--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,2 +1,34 @@
 @use "./resets" as *;
 @use "./variables" as *;
+@use "./fonts" as *;
+
+.header {
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &__dropdown {
+    width: 10rem;
+  }
+}
+// HOME
+.header__link {
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+// dropdown
+.header__dropdown {
+  width: 10vw;
+  height: 1.5rem;
+  text-align: center;
+  border: 0px;
+  &:hover {
+    background-color: rgba(211, 211, 211, 0.749);
+    border-color: white;
+  }
+}
