--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -5,30 +5,34 @@
 .header {
   height: 20vh;
   display: flex;
+  background-color: rgb(143, 186, 230);
+  color: white;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   &__dropdown {
-    width: 10rem;
+    font-size: 16px;
+    color: black;
+    margin: 1rem 0;
+    width: 30vw;
+    height: 1.5rem;
+    text-align: center;
+    border: 0px;
+    border-radius: 5px;
+    &:hover {
+      background-color: rgba(236, 236, 236, 0.496);
+      box-shadow: 0 2.8px 2.2px rgba(255, 255, 255, 0.603),
+        0 6.7px 5.3px rgba(255, 255, 255, 0.449),
+        0 10.3px 17.9px rgba(255, 255, 255, 0.072),
+        0 10.8px 33.4px rgba(255, 255, 255, 0.457);
+    }
   }
-}
-// HOME
-.header__link {
-  text-decoration: none;
-  color: black;
-  font-size: 30px;
-  &:hover {
-    text-decoration: underline;
-  }
-}
-// dropdown
-.header__dropdown {
-  width: 10vw;
-  height: 1.5rem;
-  text-align: center;
-  border: 0px;
-  &:hover {
-    background-color: rgba(211, 211, 211, 0.749);
-    border-color: white;
+  &__link {
+    text-decoration: none;
+    font-size: 45px;
+    color: rgb(255, 255, 255);
+    &:hover {
+      text-decoration: overline;
+    }
   }
 }
